# llm_engineering

./: .gitignore  pyproject.toml
week1_projects/: day1.ipynb  day5.ipynb  summary_website.py
