[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.1",
]
